--- a/views/show.liquid
+++ b/views/show.liquid
@@ -7,6 +7,10 @@
         width: 720px;
         padding: 40px;
     }
+    .fs img {
+        height: 300px;
+        width: 300px;
+    }
     .show {
         /* border: 3px dashed purple; */
         width: fit-content;
@@ -40,7 +44,7 @@
 
 <article class="show">
     
-    <img src="{{fighter.img}}" alt="fighter pic"> 
+    <img src="{{fighter.img}}" alt="fighter img"> 
     <div class="right">
         <h1 class="name">{{fighter.name}}</h1><br>
         <h4>{{fighter.description}}</h4>
@@ -51,6 +55,7 @@
             <p>{{fighter.upb}}</p>
             <p>{{fighter.downb}}</p>
             <div class="fs">
+                <img src="{{fighter.fsimg}}" alt="final smash img">
                 <h3>{{fighter.fs}}</h3>
             </div>
         </div>
