fleshed out seed data

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -71,7 +71,7 @@
 
   <body>
     <header>
-      <h1>SUPER SMASH BROS WISHLIST</h1> 
+      <h1>SMASH BROS INVITATIONAL</h1> 
       <h4>begging Sakurai since Brawl...</h4>
       <div class="section">
         <a href="#">Log in</a>
