--- a/views/edit.liquid
+++ b/views/edit.liquid
@@ -2,18 +2,7 @@
 
 /* ======================= */
 
-/* VARIABLES */
-/* :root {
-  --bright-pink: #e74c83;
-  --purple: #735066;
-  --dusty-blue: #74c4cc;
-  --bright-blue: #14bece;
-} */
-
-/* GENERAL */
-
 /* CONTAINERS */
-
 .container {
     border: 5px dashed purple;
     /* background: #e7ecef; */
@@ -50,14 +39,8 @@
     margin: 10px
 }
 
-input[type="text"], textarea {
-    /* border: unset; */
-    /* border: 2px dashed green !important; */
-    background-color: #f5f3f4 !important;
-}
-
 /* FORMS */
-fieldset.neutral, fieldset.side, fieldset.up, fieldset.down, fieldset.fs {
+fieldset.neutral, fieldset.side, fieldset.up, fieldset.down, fieldset.fs, .fighter fieldset{
   border: 2px solid black;
   border-radius: 6px;
   padding: 10px;
@@ -65,45 +48,43 @@ fieldset.neutral, fieldset.side, fieldset.up, fieldset.down, fieldset.fs {
   border:2px solid rgb(245, 98, 98);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
-    fieldset.side {
-        border: 2px solid rgb(43, 117, 227);
-    }
-    fieldset.up {
-        border: 2px solid rgb(223, 203, 122);
-    }
-    fieldset.down {
-        border: 2px solid rgb(72, 184, 104);
-    }
-    fieldset.fs {
-        border: 2px solid rgb(182, 14, 182);
-    }
-
-label {
-/* border: 2px dashed blue; */
-/* font-family: 'Oswald'; */
-  font-weight: 200;
-  color: black;
-  display: block;
+fieldset.side {
+    border: 2px solid rgb(43, 117, 227);
 }
-
-input {
-  width: 100%;
-  margin: 10px 0;
-  padding: 10px;
-  box-sizing: border-box;
-  border: 1px solid var(--dusty-blue)
+fieldset.up {
+    border: 2px solid rgb(223, 203, 122);
+}
+fieldset.down {
+    border: 2px solid rgb(72, 184, 104);
+}
+fieldset.fs {
+    border: 2px solid rgb(182, 14, 182);
 }
 
 .neutral input[type="text"]:focus, .neutral textarea:focus {
-    border: 1.5px solid rgb(238, 150, 150)  !important;
+    border: 1.7px solid rgb(238, 123, 123)  !important;
 }
 .side input[type="text"]:focus, .side textarea:focus {
-    border: 1.5px solid rgb(114, 179, 235)  !important;
+    border: 1.7px solid rgb(114, 179, 235)  !important;
 }
 .up input[type="text"]:focus, .up textarea:focus {
-    border: 1.5px solid rgb(196, 189, 105)  !important;
-}.down input[type="text"]:focus, .down textarea:focus {
-    border: 1.5px solid rgb(81, 177, 88)  !important;
+    border: 1.7px solid rgb(196, 189, 105)  !important;
+}
+.down input[type="text"]:focus, .down textarea:focus {
+    border: 1.7px solid rgb(81, 177, 88)  !important;
+}
+.fs input[type="text"]:focus, .fs textarea:focus {
+    border: 1.7px solid rgb(145, 63, 186)  !important;
+}
+
+input[type="text"], textarea {
+background-color: #f5f3f4 !important;
+}
+
+label {
+  font-weight: 200;
+  color: black;
+  display: block;
 }
 
 input[type="submit"] {
@@ -115,7 +96,7 @@ input[type="submit"] {
   font-size: 1.3em;
   color: whitesmoke;
   border: 0px;
-  transition: 0.2s ease-in-out;
+  /* transition: 0.2s ease-in-out; */
 }
 
 input[type="submit"]:hover {
@@ -175,17 +156,14 @@ textarea {
         <h1>Fighter</h1>
         <form action="/smash/{{ fighter._id }}?_method=PUT" method="post">    
         <fieldset>
-            <label>
-                Name: <input type="text" name="name" placeholder="Who's the fighter?" value="{{fighter.name}}">
-            </label>
-            <label>
-                Image: <input type="text" name="img" placeholder="e.g. https://imgur.com/LEHS8h3.png" value="{{fighter.img}}">
-            </label>
-            <label>
-                Description: <input type="text" name="description" placeholder="Describe the fighter" value="{{fighter.description}}">
-            </label>
-
-            <input type="submit" value="update">
+            <label>NAME</label>
+                <input type="text" name="name" placeholder="Who's the fighter?" value="{{fighter.name}}">
+            <label>IMAGE</label>
+                <input type="text" name="img" placeholder="e.g. https://imgur.com/LEHS8h3.png" value="{{fighter.img}}">
+            <label>DESCRIPTION</label>
+            <input type="text" name="description" placeholder="Describe the fighter" value="{{fighter.description}}">
+        </fieldset>
+        <input type="submit" value="update">
     </div>
 
     <div class="moveset">
