--- a/views/edit.liquid
+++ b/views/edit.liquid
@@ -22,7 +22,9 @@
     border: 4px dashed orange;
     width: 50%;
     padding: 15px;
-    background-color: grey;
+    background-color: #e7ecef;
+    overflow: auto;
+    vertical-align: 50%;
 }
 
 .moveset {
@@ -60,6 +62,9 @@ fieldset.down {
 fieldset.fs {
     border: 2px solid rgb(182, 14, 182);
 }
+.fighter fieldset {
+    border: none;
+}
 
 .neutral input[type="text"]:focus, .neutral textarea:focus {
     border: 1.7px solid rgb(238, 123, 123)  !important;
@@ -87,22 +92,17 @@ label {
   display: block;
 }
 
-input[type="submit"] {
-  width: 100%;
-  height: 50px;
-  background: var(--purple);
-  box-shadow: 2px 2px var(--bright-blue);
-  font-family: 'Oswald';
-  font-size: 1.3em;
+.fighter input[type="submit"] {
+  width: 50%;
   color: whitesmoke;
-  border: 0px;
+  margin-left: 23%
   /* transition: 0.2s ease-in-out; */
 }
 
 input[type="submit"]:hover {
-cursor: pointer;
-background: var(--bright-blue);
-box-shadow: 2px 2px var(--purple);
+/* cursor: pointer; */
+/* background: var(--bright-blue); */
+/* box-shadow: 2px 2px var(--purple); */
 }
 
 textarea {
@@ -163,7 +163,7 @@ textarea {
             <label>DESCRIPTION</label>
             <input type="text" name="description" placeholder="Describe the fighter" value="{{fighter.description}}">
         </fieldset>
-        <input type="submit" value="update">
+        <input type="submit" value="update">   
     </div>
 
     <div class="moveset">
