implemented a form template

--- a/views/edit.liquid
+++ b/views/edit.liquid
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
 
 /* ======================= */
 
@@ -109,9 +109,9 @@ textarea {
   resize: none;
   height: 75px;
 }
-</style>
+</style> -->
 
-{% layout "layout.liquid" %}
+{% layout "form.liquid" %}
 {% block content %}
 
 <!-- <div>
