--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -53,7 +53,7 @@
         color: #727272;
       }
       .section {
-        border: 1px dashed black;
+        /* border: 1px dashed black; */
       }
       a {
         margin: 15px;
