--- a/views/edit.liquid
+++ b/views/edit.liquid
@@ -164,7 +164,10 @@ textarea {
             <!-- <input type="text" name="description" placeholder="Describe the fighter" value="{{fighter.description}}"> -->
             <textarea name="description" placeholder="Describe the fighter">{{fighter.description}}</textarea>
         </fieldset>
-        <input type="submit" value="update">   
+        <input id="save" type="submit" value="save">   
+
+        <form class="delete" action="/smash/{{ fighter._id }}?_method=DELETE" method="post">
+            <input id="delete" type="submit" value="DELETE">
     </div>
 
     <div class="moveset">
