--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -37,7 +37,7 @@
         background-color: #22223b;
       }
       header {
-        /* border: 2px dashed white; */
+        /* border: 2px dashed red; */
         text-align: center;
         background-color: #f8f9fa;
         padding: 15px;
@@ -57,7 +57,7 @@
       }
       a {
         margin: 15px;
-        /* color: red; */
+        /* border: 2px dashed red; */
       }
       footer {
           border: 1px dashed black;
